Logtalk/examples/errors/lgtmthdredef.lgt

:- object(lgtmthdredef).


	asserta(_).


:- end_object.
